--- a/assets/css/tentang_lab.css
+++ b/assets/css/tentang_lab.css
@@ -1,6 +1,6 @@
 /* ========== VARIABEL WARNA ========== */
 :root {
-    --bg-color: #FFFFFF;      /* Background Halaman PUTIH */
+    --bg-color: #f0f4f8;      /* Background Halaman PUTIH */
     --wrapper-bg: #FFFFFF;    /* Kotak Luar Visi Misi (Wrapper) PUTIH */
     --inner-bg: #E3F2FD;      /* Kotak Dalam Visi Misi & Roadmap BIRU MUDA */
     --text-dark: #0F3057;     /* Teks Biru Navy */
